syntax = "proto3";

package memos.store;

option go_package = "gen/store";

message ActivityMemoCommentCreatePayload {
  int32 memo_id = 1;
  int32 user_id = 2;
  int32 
}
